<resources>
    <string name="app_name">IMLocation</string>
    <string name="title_activity_main">IMLocation</string>
    <string name="nav_training_scan">Консоль сканирований</string>
    <string name="nav_training_map">Обучение системы</string>
    <string name="nav_definition">Определение</string>
    <string name="nav_search">Поиск локации</string>
    <string name="nav_settings">Настройки</string>

    <!--TrainingScanFragment-->
    <string name="scanningTitle">Панель сканирования</string>
    <string name="moreDetailed">Подробнее</string>
    <string name="scanningDate">Дата сканирования: </string>
    <string name="scanningNumber">Количество наборов сканирования: </string>
    <string name="numberOfSuccessfulScans">Количество оставшихся сканирований: </string>
    <string name="hintRequiredQuantity">Введите кол-во сканирований</string>
    <string name="startScanning">Начать сканирование</string>
    <string-array name="scanMods">
        <item>Режим тренировки(сканирование)</item>
        <item>Режим определения</item>
    </string-array>
    <string name="pointName">Название точки</string>

    <string name="nav_header_title">Определение местоположения по Wi-fi</string>
    <string name="nav_header_subtitle">by RTUITLab</string>

    <!--TrainingMapFragment-->
    <string name="showAllPointsOn">Скрыть точки</string>
    <string name="showAllPointsOff">Отобразить точки</string>
    <string name="updateMapButton">Обновить карту</string>
    <string name="showPointOnMap">Отобразить точку на карте</string>
    <string-array name="mapMods">
        <item>Добавление точек</item>
        <item>Сканирование точек</item>
        <item>Выбор соседей точек</item>
        <item>Удаление точек</item>
    </string-array>
    <string name="inputDescription">Данные создаваемой локации</string>
    <string name="inputNameDescription">Название локации</string>
    <string name="inputXDescription">Координата по горизонтали</string>
    <string name="inputYDescription">Координата по вертикали</string>
    <string name="inputTypeOfLocationDescription">Тип локации</string>
    <string name="inputFloorNumberDescription">Номер этажа</string>
    <string name="hintY">Y</string>
    <string name="hintX">X</string>
    <string-array name="isRoomSpinners">
        <item>Кабинет</item>
        <item>Коридор</item>
    </string-array>
    <string-array name="floorIds">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="postToServer">Отправить на сервер</string>
    <string name="selectedMapPoint">Выбранная точка</string>

    <string name="descriptionAboutPointsScanningOnServer">Данные точки на сервере</string>
    <string name="descriptionAboutStartScanFromSelectedPoint">Запуск сканирований для выбранной точки</string>
    <string name="selectedNumberOfScanning">Количество сканирований: </string>

    <string name="editSelectedPointNeighbours">Редактировать связи выбранной точки</string>
    <string name="addSelectedPointAsNeighbour">Добавить выбранную точку как связь</string>
    <string name="accept">Подтвердить</string>
    <string name="cancel">Отмена</string>
    <string name="neighbors">Соседи для точки </string>

    <string name="deleteLPInfoButtonText">Удалить всю инфомрациию о точке</string>
    <string name="deleteLPButtonText">Удалить сканирования точки</string>

    <!-- DefinitionMap -->
    <string name="buildRouteContainerTitle">Построение маршрута</string>
    <string name="hindTextEditStart">Откуда</string>
    <string name="hindTextEditEnd">Куда</string>
    <string name="hintFindLine">Поиск локации</string>
    <string name="buildRouteButtonText">Построить маршрут</string>
    <string name="findRoomButtonText">Найти локацию</string>


    <!-- Settings -->
    <string name="scanGroupTitle">Параметры сканирования</string>
    <string name="scanIntervalText">Интервал между блоками сканирований</string>
    <string name="canIntervalInputHint">Введите интервал в секундах</string>
    <string name="numberOfScansInKitText">Количество сканирований в одном блоке: </string>
    <string name="acceptedChangeSettings">Подтвердить изменения параметров</string>
    <string name="accessGroupTitle">Информация об уровне доступа</string>
    <string name="currentAccessLevel">Текущий уровень доступа: </string>
    <string name="updateSettingInfo">Обновить данные</string>
    <string name="scanParamsHintText">
        Для определения местоположения приложение собирает БЛОК сканирований и отправляет его на сервер.\n\n
        Интервал между блоками сканирований определяет СЕКУНДНЫЙ ПРОМЕЖУТОК, внутри которого приложение НЕ БУДЕТ вызывать WI-FI сканирования.\n\n
        Повышение КОЛИЧЕСТВА СКАНИРОВАНИЙ в одном блоке увеличивает точность определения местоположения, однако вместе с этим возрастает и продолжительность процесса.\n\n
        При количестве сканирований, равном НУЛЮ, местоположение ПЕРЕСТАЕТ определяться.
    </string>
    <string name="accessLevelHintText">
        Уровень доступа варьируется от 0 (пользователь) до 2 (администратор) и влияет на доступность различных функций приложения.\n\n
        Для повешения уровня доступа своего устройства обратитесь к владельцу приложения.
    </string>


</resources>