<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_definition">

    <fragment
        android:id="@+id/nav_definition"
        android:name="com.mrkiriss.wifilocalpositioning.ui.detection.LocationDetectionFragment"
        android:label="@string/nav_definition"
        tools:layout="@layout/fragment_location_detection">
        <action
            android:id="@+id/action_nav_definition_to_nav_search"
            app:destination="@id/nav_search"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
    </fragment>
    <fragment
        android:id="@+id/nav_search"
        android:name="com.mrkiriss.wifilocalpositioning.ui.search.SearchFragment"
        android:label="@string/nav_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_nav_search_to_nav_definition"
            app:destination="@id/nav_definition"
            app:enterAnim="@anim/from_left"
            app:exitAnim="@anim/to_right" />
    </fragment>
    <fragment
        android:id="@+id/nav_training"
        android:name="com.mrkiriss.wifilocalpositioning.ui.scanconsole.TrainingScanFragment"
        android:label="@string/nav_training_scan"
        tools:layout="@layout/fragment_training_scan" />
    <fragment
        android:id="@+id/nav_training2"
        android:name="com.mrkiriss.wifilocalpositioning.ui.training.TrainingMapFragment"
        android:label="@string/nav_training_map"
        tools:layout="@layout/fragment_training_map" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.mrkiriss.wifilocalpositioning.ui.settings.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>