<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.mrkiriss.wifilocalpositioning.viewmodel.TrainingMapViewModel" />
    </data>

    <LinearLayout

        android:id="@+id/modRemovePointsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="@{viewModel.selectedMod==3?View.VISIBLE:View.GONE}">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/selectedMapPoint"
                app:autoSizeTextType="uniform" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@{viewModel.selectedMapPoint.toStringAllObject()}"
                app:autoSizeTextType="uniform" />
        </LinearLayout>

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/pointName"
            android:inputType="textPersonName"
            android:text="@={viewModel.inputCabId}"
            app:autoSizeTextType="uniform" />

        <Button
            android:id="@+id/deleteLPButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()->viewModel.startDeletingLP()}"
            android:text="@string/deleteLPButtonText"
            app:autoSizeTextType="uniform" />

        <Button
            android:id="@+id/deleteLPINfoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()->viewModel.startDeletingLPINfo()}"
            android:text="@string/deleteLPInfoButtonText"
            app:autoSizeTextType="uniform" />

    </LinearLayout>
</layout>