<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.mrkiriss.wifilocalpositioning.viewmodel.TrainingMapViewModel" />
    </data>

    <LinearLayout

        android:id="@+id/modNeighborsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="@{viewModel.selectedMod==2?View.VISIBLE:View.GONE}">

        <LinearLayout
            android:id="@+id/currentChosenPointContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="9">

            <TextView
                android:id="@+id/currentChosenPointInfo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/selectedMapPoint"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/currentChosenPointContent"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:text="@{viewModel.selectedMapPoint.toStringAllObject()}"
                android:textSize="12sp" />

            <Button
                android:id="@+id/actionWithPointButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:onClick="@{()->viewModel.selectActionForChangingNeighbors()}"
                android:text="@{viewModel.contentOnActionsButtonChangesNeighbors}"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/acceptedForEditPointInfoContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="7">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/neighbors"
                app:autoSizeTextType="uniform" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:text="@{viewModel.selectedToChangMapPoint.toOneString()}"
                app:autoSizeTextType="uniform" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mapPointsRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:enabled="@{viewModel.selectedToChangMapPoint!=null &amp;&amp; viewModel.currentChangeableConnections!=null}"
                android:onClick="@{()->viewModel.cancelPointChangingNeighbors()}"
                android:text="@string/cancel"
                app:autoSizeTextType="uniform" />

            <Button
                android:id="@+id/button6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:enabled="@{viewModel.selectedToChangMapPoint!=null &amp;&amp; viewModel.currentChangeableConnections!=null}"
                android:onClick="@{()->viewModel.acceptPointChangingNeighbors()}"
                android:text="@string/accept"
                app:autoSizeTextType="uniform" />
        </LinearLayout>

    </LinearLayout>
</layout>